create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -1098,6 +1098,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. By continuing to browse the site, you agree to accept our use of cookies. Read more <a href='https://aboutcookies.org/'>about cookies</a>">
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. By continuing to browse the site, you agree to accept our use of cookies. Read more about <a href='https://help.github.com/en/articles/github-subprocessors-and-cookies/'>cookies on github</a>">
   </body>
 </html>
